# LiteView

./: .gitignore  README.md  main.py  pyproject.toml
src/: db.py  grid_layout1.tcss  main.py
src/screens/: commit_screen.py  commit_screen.tcss  error_screen.py  explain_plan_screen.py  explain_plan_screen.tcss
src/widgets/: QueryArea.py  QueryResults.py  TableTree.py  query_area_layout.tcss  query_results.tcss
