[project]
name = "liteview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest-asyncio>=1.2.0",
    "textual[syntax]>=6.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "textual-dev>=1.7.0",
]
